--- a/www/index.html
+++ b/www/index.html
@@ -27,7 +27,7 @@
     <!--
       The nav bar that will be updated as we navigate between views.
     -->
-    <ion-nav-bar class="bar-stable">
+    <ion-nav-bar class=" bar-royal">
       <ion-nav-back-button>
       </ion-nav-back-button>
     </ion-nav-bar>
@@ -44,11 +44,11 @@
           <div class="list">
             <label class="item item-input">
               <span class="input-label">Username</span>
-              <input type="text" ng-model="user.username">
+              <input type="text" ng-model="user.username" value="13801356729">
             </label>
             <label class="item item-input">
               <span class="input-label">Password</span>
-              <input type="password" ng-model="user.password">
+              <input type="password" ng-model="user.password" value="123456">
             </label>
           </div>
           <div class="padding">
