--- a/www/index.html
+++ b/www/index.html
@@ -71,11 +71,11 @@
           <div class="list">
             <label class="item item-input">
               <span class="input-label">Username</span>
-              <input type="text" ng-model="user.username" value="13801356729">
+              <input type="text" ng-model="user.username">
             </label>
             <label class="item item-input">
               <span class="input-label">Password</span>
-              <input type="password" ng-model="user.password" value="123456">
+              <input type="password" ng-model="user.password">
             </label>
           </div>
           <div class="padding">
