--- a/www/index.html
+++ b/www/index.html
@@ -60,6 +60,9 @@
             <p class="text-center">
               <a href="#/forgot-password">Forgot password</a>
             </p>
+            <p class="text-center">
+              <a href="_test/audio.html">Audio Test</a>
+            </p>
           </div>
         </ion-content>
       </ion-view>
